fixed classic bug, added expand and collapse functionality

--- a/ClientApp/src/app/create/create.component.css
+++ b/ClientApp/src/app/create/create.component.css
@@ -54,3 +54,8 @@
   background-color: #ffffff;
 }
 
+.ViewResizeImage {
+  width: 20px;
+  height: 20px;
+  float: right;
+}
